chore: rename public
