# core/model/publicmcp.go
@@ -34,27 +34,27 @@ type ReusingParam struct {
 	Required    bool      `json:"required"`
 }
 
-type MCPProxySSEPrice struct {
+type MCPPrice struct {
 	DefaultToolsCallPrice float64
 	ToolsCallPrices       map[string]float64
 }
 
-type MCPProxySSEConfig struct {
+type PublicMCPProxySSEConfig struct {
 	URL           string                  `json:"url"`
 	Querys        map[string]string       `json:"querys"`
 	Headers       map[string]string       `json:"headers"`
 	ReusingParams map[string]ReusingParam `json:"reusing_params"`
-	Price         MCPProxySSEPrice        `json:"price"`
+	Price         MCPPrice                `json:"price"`
 }
 
-type GroupMCPReusingParam struct {
+type GroupPublicMCPReusingParam struct {
 	MCPID         string            `gorm:"primaryKey"                    json:"mcp_id"`
 	GroupID       string            `gorm:"primaryKey"                    json:"group_id"`
 	Group         *Group            `gorm:"foreignKey:GroupID"            json:"-"`
 	ReusingParams map[string]string `gorm:"serializer:fastjson;type:text" json:"reusing_params"`
 }
 
-func (l *GroupMCPReusingParam) BeforeCreate(_ *gorm.DB) (err error) {
+func (l *GroupPublicMCPReusingParam) BeforeCreate(_ *gorm.DB) (err error) {
 	if l.MCPID == "" {
 		return errors.New("mcp id is empty")
 	}
@@ -65,27 +65,28 @@ func (l *GroupMCPReusingParam) BeforeCreate(_ *gorm.DB) (err error) {
 }
 
 type MCPOpenAPIConfig struct {
-	OpenAPISpec    string `json:"openapi_spec"`
-	OpenAPIContent string `json:"openapi_content,omitempty"`
-	Server         string `json:"server,omitempty"`
-	Authorization  string `json:"authorization,omitempty"`
+	OpenAPISpec    string   `json:"openapi_spec"`
+	OpenAPIContent string   `json:"openapi_content,omitempty"`
+	Server         string   `json:"server,omitempty"`
+	Authorization  string   `json:"authorization,omitempty"`
+	Price          MCPPrice `json:"price"`
 }
 
 type PublicMCP struct {
-	ID                    string                 `gorm:"primaryKey"                    json:"id"`
-	CreatedAt             time.Time              `gorm:"index"                         json:"created_at"`
-	UpdateAt              time.Time              `gorm:"index"                         json:"update_at"`
-	GroupMCPReusingParams []GroupMCPReusingParam `gorm:"foreignKey:MCPID"              json:"-"`
-	Name                  string                 `json:"name"`
-	Type                  MCPType                `gorm:"index"                         json:"type"`
-	RepoURL               string                 `json:"repo_url"`
-	ReadmeURL             string                 `json:"readme_url"`
-	Readme                string                 `gorm:"type:text"                     json:"readme"`
-	Tags                  []string               `gorm:"serializer:fastjson;type:text" json:"tags,omitempty"`
-	Author                string                 `json:"author"`
-	LogoURL               string                 `json:"logo_url"`
-	ProxySSEConfig        *MCPProxySSEConfig     `gorm:"serializer:fastjson;type:text" json:"proxy_sse_config,omitempty"`
-	OpenAPIConfig         *MCPOpenAPIConfig      `gorm:"serializer:fastjson;type:text" json:"openapi_config,omitempty"`
+	ID                          string                       `gorm:"primaryKey"                    json:"id"`
+	CreatedAt                   time.Time                    `gorm:"index"                         json:"created_at"`
+	UpdateAt                    time.Time                    `gorm:"index"                         json:"update_at"`
+	GroupPublicMCPReusingParams []GroupPublicMCPReusingParam `gorm:"foreignKey:MCPID"              json:"-"`
+	Name                        string                       `json:"name"`
+	Type                        MCPType                      `gorm:"index"                         json:"type"`
+	RepoURL                     string                       `json:"repo_url"`
+	ReadmeURL                   string                       `json:"readme_url"`
+	Readme                      string                       `gorm:"type:text"                     json:"readme"`
+	Tags                        []string                     `gorm:"serializer:fastjson;type:text" json:"tags,omitempty"`
+	Author                      string                       `json:"author"`
+	LogoURL                     string                       `json:"logo_url"`
+	ProxySSEConfig              *PublicMCPProxySSEConfig     `gorm:"serializer:fastjson;type:text" json:"proxy_sse_config,omitempty"`
+	OpenAPIConfig               *MCPOpenAPIConfig            `gorm:"serializer:fastjson;type:text" json:"openapi_config,omitempty"`
 }
 
 func (l *PublicMCP) BeforeCreate(_ *gorm.DB) (err error) {
@@ -96,11 +97,11 @@ func (l *PublicMCP) BeforeCreate(_ *gorm.DB) (err error) {
 }
 
 func (c *PublicMCP) BeforeDelete(tx *gorm.DB) (err error) {
-	return tx.Model(&GroupMCPReusingParam{}).Where("mcp_id = ?", c.ID).Delete(&GroupMCPReusingParam{}).Error
+	return tx.Model(&GroupPublicMCPReusingParam{}).Where("mcp_id = ?", c.ID).Delete(&GroupPublicMCPReusingParam{}).Error
 }
 
-// CreateMCP creates a new MCP
-func CreateMCP(mcp *PublicMCP) error {
+// CreatePublicMCP creates a new MCP
+func CreatePublicMCP(mcp *PublicMCP) error {
 	err := DB.Create(mcp).Error
 	if err != nil && errors.Is(err, gorm.ErrDuplicatedKey) {
 		return errors.New("mcp server already exist")
@@ -108,8 +109,8 @@ func CreateMCP(mcp *PublicMCP) error {
 	return err
 }
 
-// UpdateMCP updates an existing MCP
-func UpdateMCP(mcp *PublicMCP) error {
+// UpdatePublicMCP updates an existing MCP
+func UpdatePublicMCP(mcp *PublicMCP) error {
 	selects := []string{
 		"repo_url",
 		"readme",
@@ -132,8 +133,8 @@ func UpdateMCP(mcp *PublicMCP) error {
 	return HandleUpdateResult(result, ErrPublicMCPNotFound)
 }
 
-// DeleteMCP deletes an MCP by ID
-func DeleteMCP(id string) error {
+// DeletePublicMCP deletes an MCP by ID
+func DeletePublicMCP(id string) error {
 	if id == "" {
 		return errors.New("MCP id is empty")
 	}
@@ -141,8 +142,8 @@ func DeleteMCP(id string) error {
 	return HandleUpdateResult(result, ErrPublicMCPNotFound)
 }
 
-// GetMCPByID retrieves an MCP by ID
-func GetMCPByID(id string) (*PublicMCP, error) {
+// GetPublicMCPByID retrieves an MCP by ID
+func GetPublicMCPByID(id string) (*PublicMCP, error) {
 	if id == "" {
 		return nil, errors.New("MCP id is empty")
 	}
@@ -151,8 +152,8 @@ func GetMCPByID(id string) (*PublicMCP, error) {
 	return &mcp, HandleNotFound(err, ErrPublicMCPNotFound)
 }
 
-// GetMCPs retrieves MCPs with pagination and filtering
-func GetMCPs(page int, perPage int, mcpType MCPType, keyword string) (mcps []*PublicMCP, total int64, err error) {
+// GetPublicMCPs retrieves MCPs with pagination and filtering
+func GetPublicMCPs(page int, perPage int, mcpType MCPType, keyword string) (mcps []*PublicMCP, total int64, err error) {
 	tx := DB.Model(&PublicMCP{})
 
 	if mcpType != "" {
@@ -183,12 +184,12 @@ func GetMCPs(page int, perPage int, mcpType MCPType, keyword string) (mcps []*Pu
 	return mcps, total, err
 }
 
-func SaveGroupMCPReusingParam(param *GroupMCPReusingParam) (err error) {
+func SaveGroupPublicMCPReusingParam(param *GroupPublicMCPReusingParam) (err error) {
 	return DB.Save(param).Error
 }
 
-// UpdateGroupMCPReusingParam updates an existing GroupMCPReusingParam
-func UpdateGroupMCPReusingParam(param *GroupMCPReusingParam) error {
+// UpdateGroupPublicMCPReusingParam updates an existing GroupMCPReusingParam
+func UpdateGroupPublicMCPReusingParam(param *GroupPublicMCPReusingParam) error {
 	result := DB.
 		Select([]string{
 			"reusing_params",
@@ -198,23 +199,23 @@ func UpdateGroupMCPReusingParam(param *GroupMCPReusingParam) error {
 	return HandleUpdateResult(result, ErrGroupMCPReusingParamNotFound)
 }
 
-// DeleteGroupMCPReusingParam deletes a GroupMCPReusingParam
-func DeleteGroupMCPReusingParam(mcpID string, groupID string) error {
+// DeleteGroupPublicMCPReusingParam deletes a GroupMCPReusingParam
+func DeleteGroupPublicMCPReusingParam(mcpID string, groupID string) error {
 	if mcpID == "" || groupID == "" {
 		return errors.New("MCP ID or Group ID is empty")
 	}
 	result := DB.
 		Where("mcp_id = ? AND group_id = ?", mcpID, groupID).
-		Delete(&GroupMCPReusingParam{})
+		Delete(&GroupPublicMCPReusingParam{})
 	return HandleUpdateResult(result, ErrGroupMCPReusingParamNotFound)
 }
 
-// GetGroupMCPReusingParam retrieves a GroupMCPReusingParam by MCP ID and Group ID
-func GetGroupMCPReusingParam(mcpID string, groupID string) (*GroupMCPReusingParam, error) {
+// GetGroupPublicMCPReusingParam retrieves a GroupMCPReusingParam by MCP ID and Group ID
+func GetGroupPublicMCPReusingParam(mcpID string, groupID string) (*GroupPublicMCPReusingParam, error) {
 	if mcpID == "" || groupID == "" {
 		return nil, errors.New("MCP ID or Group ID is empty")
 	}
-	var param GroupMCPReusingParam
+	var param GroupPublicMCPReusingParam
 	err := DB.Where("mcp_id = ? AND group_id = ?", mcpID, groupID).First(&param).Error
 	return &param, HandleNotFound(err, ErrGroupMCPReusingParamNotFound)
 }
